Fix cart item not fully stretch

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -178,6 +178,7 @@ body {
     overflow: hidden;
     background-color: #e9e9e9;
     border-radius: var(--border-radius);
+    width: 100%;
 
     img:first-child {
       width: 30%;
